--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<body><title>Landing Page</title>
+<body><title>CycleMelb</title>
 <link rel="stylesheet" href="styles.css">
 <div class="container">
     <div class="content">
