--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -18,7 +18,7 @@
 </div>
 <script>
     document.getElementById('navigateButton').addEventListener('click', function() {
-        window.location.href = 'heatmap.html';
+        window.location.href = 'map.html';
     });
 
     document.getElementById('navigateButton1').addEventListener('click', function() {
