--- a/index.html
+++ b/index.html
@@ -1,188 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Demo: Make a choropleth map</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
-    <link
-            href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css"
-            rel="stylesheet"
-    />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        h2,
-        h3 {
-            margin: 10px;
-            font-size: 18px;
-        }
-
-        h3 {
-            font-size: 16px;
-        }
-
-        p {
-            margin: 10px;
-        }
-
-        .map-overlay {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            background: #fff;
-            margin-right: 20px;
-            font-family: Arial, sans-serif;
-            overflow: auto;
-            border-radius: 3px;
-        }
-
-        #map {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-        }
-
-        #features {
-            top: 0;
-            height: 100px;
-            margin-top: 20px;
-            width: 250px;
-        }
-
-        #legend {
-            padding: 10px;
-            box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
-            line-height: 18px;
-            height: 150px;
-            margin-bottom: 40px;
-            width: 100px;
-        }
-
-        .legend-key {
-            display: inline-block;
-            border-radius: 20%;
-            width: 10px;
-            height: 10px;
-            margin-right: 5px;
-        }
-    </style>
 </head>
-<body>
-<div id="map"></div>
-<div class="map-overlay" id="features">
-    <h2>US population density</h2>
-    <div id="pd"><p>Hover over a state!</p></div>
+<body><title>Landing Page</title>
+<link rel="stylesheet" href="styles.css">
+<div class="container">
+    <div class="content">
+        <h1>CycleMelb</h1>
+        <div class="button-container">
+            <button id="navigateButton" class="btn">Accident maps</button> <!-- yet to implement feature  -->
+            <button id="navigateButton1" class="btn">View Routes</button>
+        </div>
+    </div>
 </div>
-<div class="map-overlay" id="legend"></div>
-
 <script>
-    // define access token
-    mapboxgl.accessToken = 'pk.eyJ1IjoiYWJiaXNoZWsiLCJhIjoiY2x6Y2trYzY5MGNucTJqcHFnMzVhNnhvcyJ9.ruwp1n7aBJwok0LXQyyRNQ';
-
-    // create map
-    const map = new mapboxgl.Map({
-        container: 'map', // container id
-        style: 'mapbox://styles/chitransh25/clzge9op400is01r10jl3dt8l',
-        // map style URL from Mapbox
-        center: [144.9631, -37.8136], // starting position [lng, lat]
-        zoom: 10 // starting zoom
+    document.getElementById('navigateButton').addEventListener('click', function() {
+        window.location.href = 'map.html';
     });
 
-    // wait for map to load before adjusting it
-    map.on('load', () => {
-        // make a pointer cursor
-        map.getCanvas().style.cursor = 'default';
-
-        // set map bounds to the continental US
-        map.fitBounds([
-            [-133.2421875, 16.972741],
-            [-47.63671875, 52.696361]
-        ]);
-
-        // Add a source for the state polygons.
-        map.addSource('states', {
-            'type': 'geojson',
-            'data': 'https://docs.mapbox.com/mapbox-gl-js/assets/us_states.geojson' // GeoJSON URL
-        });
-
-        // Add a layer showing state polygons.
-        map.addLayer({
-            'id': 'statedata',
-            'type': 'fill',
-            'source': 'states',
-            'layout': {},
-            'paint': {
-                'fill-color': [
-                    'interpolate',
-                    ['linear'],
-                    ['get', 'density'],
-                    0, '#FFEDA0',
-                    10, '#FED976',
-                    20, '#FEB24C',
-                    50, '#FD8D3C',
-                    100, '#FC4E2A',
-                    200, '#E31A1C',
-                    500, '#BD0026',
-                    1000, '#800026'
-                ],
-                'fill-outline-color': '#BBBBBB',
-                'fill-opacity': 0.7
-            }
-        });
-
-        // define layer names
-        const layers = [
-            '0-10',
-            '10-20',
-            '20-50',
-            '50-100',
-            '100-200',
-            '200-500',
-            '500-1000',
-            '1000+'
-        ];
-        const colors = [
-            '#FFEDA0',
-            '#FED976',
-            '#FEB24C',
-            '#FD8D3C',
-            '#FC4E2A',
-            '#E31A1C',
-            '#BD0026',
-            '#800026'
-        ];
-
-        // create legend
-        const legend = document.getElementById('legend');
-
-        layers.forEach((layer, i) => {
-            const color = colors[i];
-            const item = document.createElement('div');
-            const key = document.createElement('span');
-            key.className = 'legend-key';
-            key.style.backgroundColor = color;
-
-            const value = document.createElement('span');
-            value.innerHTML = `${layer}`;
-            item.appendChild(key);
-            item.appendChild(value);
-            legend.appendChild(item);
-        });
-
-        // change info window on hover
-        map.on('mousemove', (event) => {
-            const states = map.queryRenderedFeatures(event.point, {
-                layers: ['statedata']
-            });
-            document.getElementById('pd').innerHTML = states.length
-                ? `<h3>${states[0].properties.name}</h3><p><strong><em>${states[0].properties.density}</strong> people per square mile</em></p>`
-                : `<p>Hover over a state!</p>`;
-        });
+    document.getElementById('navigateButton1').addEventListener('click', function() {
+        window.location.href = 'input.html';
     });
 </script>
 </body>
