--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="header">
     <nav>
         <ul>
-            <li><a href="homeScreen.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="HomeScreen.html">Home</a></li>
+            <li><a href="#">About Us</a></li>
         </ul>
     </nav>
 </div>
