--- a/map.html
+++ b/map.html
@@ -11,6 +11,45 @@
     <link rel="stylesheet" href="map.css">
 </head>
 <body>
+    <div class="header">
+    <nav>
+        <ul>
+            <li><a href="HomeScreen.html">Home</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+    </nav>
+</div>
+
+<style>
+.header {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.header nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header nav ul li {
+    float: left;
+}
+
+.header nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.header nav ul li a:hover {
+    background-color: #ddd;
+    color: black;
+}
+</style>
+
 <div id="map"></div>
 <script src="map.js"></script>
 </body>
