--- a/input.html
+++ b/input.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="input.css">
 </head>
 <body>
-    <div class="header">
+<!-- header.html -->
+<div class="header">
     <nav>
         <ul>
-            <li><a href="HomeScreen.html">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="homeScreen.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
         </ul>
     </nav>
 </div>
@@ -49,6 +50,7 @@
     color: black;
 }
 </style>
+
 <br>
     <div class="container">
         <h1>Plan Your Route</h1>
