--- a/input.html
+++ b/input.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css" type="text/css">
     <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script> <!-- Add Turf.js -->
     <link rel="stylesheet" href="input.css">
+    <style>
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 
