--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <div class="content">
-        <h1>CycleMelb</h1>
+        <h1><br><br>CycleMelb</h1>
         <div class="button-container">
             <button id="navigateButton" class="btn">Accident maps</button> <!-- yet to implement feature  -->
             <button id="navigateButton1" class="btn">View Routes</button>
