--- a/input.html
+++ b/input.html
@@ -67,7 +67,9 @@
             <button onclick="searchRoute()">Search</button>
             <button onclick="clearFields()">Clear</button>
         </div>
-        
+        <footer class="footer">
+            <p>&copy; 2024 CycleMelb. All rights reserved.</p>
+        </footer>
     </div>
 
     <script src="input.js"></script>
