--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         color: white;
         text-align: left;
         padding: 10px 0;
+        position: fixed;
+        top: 0;
     }
     
     .header nav ul {
