--- a/map.html
+++ b/map.html
@@ -23,6 +23,7 @@
             top: 0;
             left: 0;
             z-index: 1000;
+            font-family: Arial, sans-serif; /* Added font-family property */
         }
 
         .header nav ul {
